@@ -1,3 +1,13 @@
+2007-12-19  Christian Persch  <chpe@gnome.org>
+
+	* glib/gchecksum.c: (g_checksum_type_get_length),
+	(g_checksum_get_digest):
+	* glib/gchecksum.h:
+	* glib/glib.symbols:
+	* tests/checksum-test.c: (test_checksum): Add
+	g_checksum_type_get_length, and change g_checksum_get_digest to use a
+	provided buffer instead of returning allocated memory. Bug #501853.
+
 2007-12-19  Emmanuele Bassi  <ebassi@gnome.org>
 
 	* glib/gtimer.c (g_time_val_from_iso8601): Fix the date validation
